Fixed Search Select displaying behind results container

--- a/src/components/commons/Item/Item.css
+++ b/src/components/commons/Item/Item.css
@@ -1,5 +1,4 @@
 .item {
-    cursor: grab;
     position: relative;
     z-index: initial;
 }
