--- a/src/components/commons/Items/Items.css
+++ b/src/components/commons/Items/Items.css
@@ -4,7 +4,7 @@
     margin-bottom: 0;
     list-style-type: none;
     position: relative;
-    z-index: 10;
+    z-index: 0;
     display: grid;
     grid-template-columns: repeat( auto-fill, minmax(min(13em, 100%), 1fr) );
     overflow-y: auto;
